# reference_model_siso

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build_and_install.sh  clean.sh  compile_and_install.sh  compile_commands.json  compile_workflow.sh
cmake/: reference_model_sisoConfig.cmake.in
include/: reference_model_siso.hpp  reference_model_third_order_siso.hpp
src/: reference_model_siso.cpp  reference_model_third_order_siso.cpp
